Moving RTE to UniversalRP

--- a/RTE_XR/Assembly-CSharp.csproj
+++ b/RTE_XR/Assembly-CSharp.csproj
@@ -98,10 +98,12 @@
     <Compile Include="Assets\Battlehub\RTSL\Scripts\TypeMap.cs" />
     <Compile Include="Assets\Battlehub\RTSL\Scripts\TypeModelCreator.cs" />
     <Compile Include="Assets\Battlehub\RTSL\Scripts\UnityObjectFactory.cs" />
-    <Compile Include="Assets\RTHandlesURP\Scripts\RenderMeshesCache.cs" />
-    <Compile Include="Assets\RTHandlesURP\Scripts\RenderSelection.cs" />
-    <Compile Include="Assets\RTHandlesURP\Scripts\RenderSelectionDemo.cs" />
-    <Compile Include="Assets\RTHandlesURP\Scripts\RenderersCache.cs" />
+    <Compile Include="Assets\URP\RTEditor\Scripts\URPInit.cs" />
+    <Compile Include="Assets\URP\RTHandles\Scripts\OutlineManagerURP.cs" />
+    <Compile Include="Assets\URP\RTHandles\Scripts\RenderMeshesCache.cs" />
+    <Compile Include="Assets\URP\RTHandles\Scripts\RenderSelection.cs" />
+    <Compile Include="Assets\URP\RTHandles\Scripts\RenderSelectionDemo.cs" />
+    <Compile Include="Assets\URP\RTHandles\Scripts\RenderersCache.cs" />
     <Compile Include="Assets\XRInteractionToolkit\DeactivateOnLocomotion.cs" />
     <Compile Include="Assets\XRInteractionToolkit\ILineRenderableProxy.cs" />
     <Compile Include="Assets\XRInteractionToolkit\MoveBackProvider.cs" />
@@ -110,10 +112,10 @@
     <None Include="Assets\Battlehub\README.txt" />
     <None Include="Assets\Battlehub\ThirdParty\TextMesh Pro\Resources\Shaders\TMP_Bitmap.shader" />
     <None Include="Assets\Battlehub\ThirdParty\TextMesh Pro\Resources\Shaders\TMP_SDF-Surface-Mobile.shader" />
-    <None Include="Assets\RTHandlesURP\Outline\OutlineComposite.shader" />
-    <None Include="Assets\RTHandlesURP\Outline\OutlineBlur.shader" />
+    <None Include="Assets\URP\RTHandles\Outline\OutlineComposite.shader" />
+    <None Include="Assets\URP\RTHandles\Outline\OutlineBlur.shader" />
     <None Include="Assets\Battlehub\ThirdParty\TextMesh Pro\Resources\Shaders\TMP_SDF-Surface.shader" />
-    <None Include="Assets\RTHandlesURP\Outline\OutlinePrepass.shader" />
+    <None Include="Assets\URP\RTHandles\Outline\OutlinePrepass.shader" />
     <None Include="Assets\Battlehub\ThirdParty\TextMesh Pro\Sprites\EmojiOne Attribution.txt" />
     <None Include="Assets\Battlehub\ThirdParty\TextMesh Pro\Resources\Shaders\TMP_Bitmap-Custom-Atlas.shader" />
     <None Include="Assets\Battlehub\ThirdParty\TextMesh Pro\Resources\Shaders\TMP_SDF.shader" />
@@ -121,7 +123,7 @@
     <None Include="Assets\Battlehub\ThirdParty\TextMesh Pro\Resources\Shaders\TMPro_Properties.cginc" />
     <None Include="Assets\Battlehub\ThirdParty\TextMesh Pro\Resources\Shaders\TMPro_Surface.cginc" />
     <None Include="Assets\Battlehub\ThirdParty\TextMesh Pro\Resources\LineBreaking Following Characters.txt" />
-    <None Include="Assets\RTHandlesURP\Outline\Outline.hlsl" />
+    <None Include="Assets\URP\RTHandles\Outline\Outline.hlsl" />
     <None Include="Assets\Battlehub\ThirdParty\TextMesh Pro\Resources\Shaders\TMP_SDF-Mobile Masking.shader" />
     <None Include="Assets\Battlehub\ThirdParty\TextMesh Pro\Resources\Shaders\TMP_SDF Overlay.shader" />
     <None Include="Assets\Battlehub\ThirdParty\TextMesh Pro\Resources\Shaders\TMP_Bitmap-Mobile.shader" />
