--- a/RTE_XR/Assembly-CSharp.csproj
+++ b/RTE_XR/Assembly-CSharp.csproj
@@ -98,9 +98,12 @@
     <Compile Include="Assets\Battlehub\RTSL\Scripts\TypeMap.cs" />
     <Compile Include="Assets\Battlehub\RTSL\Scripts\TypeModelCreator.cs" />
     <Compile Include="Assets\Battlehub\RTSL\Scripts\UnityObjectFactory.cs" />
+    <Compile Include="Assets\URP\RTCommon\Scripts\RuntimeGraphicsLayerURP.cs" />
     <Compile Include="Assets\URP\RTEditor\Scripts\URPInit.cs" />
+    <Compile Include="Assets\URP\RTHandles\Scripts\ExecuteCommandBuffers.cs" />
+    <Compile Include="Assets\URP\RTHandles\Scripts\MeshesCache.cs" />
     <Compile Include="Assets\URP\RTHandles\Scripts\OutlineManagerURP.cs" />
-    <Compile Include="Assets\URP\RTHandles\Scripts\RenderMeshesCache.cs" />
+    <Compile Include="Assets\URP\RTHandles\Scripts\RenderGraphics.cs" />
     <Compile Include="Assets\URP\RTHandles\Scripts\RenderSelection.cs" />
     <Compile Include="Assets\URP\RTHandles\Scripts\RenderSelectionDemo.cs" />
     <Compile Include="Assets\URP\RTHandles\Scripts\RenderersCache.cs" />
